# summarizer-api

./: README.md  docker-compose.yml  release.sh
.github/workflows/: main.yml
project/: .dockerignore  Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
project/app/: config.py  db.py  main.py  summarizer.py
project/app/api/: crud.py  ping.py  summaries.py
project/app/models/: tortoise.py
project/db/: create.sql
project/tests/: test_ping.py  test_summaries.py  test_summaries_unit.py
