[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Hunter Johnston <johnstonhuntera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.70.1"
uvicorn = "0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
