[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Hunter Johnston <johnstonhuntera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.70.1"
uvicorn = "0.16.0"
asyncpg = "0.25.0"
tortoise-orm = "0.17.8"
aerich = "0.6.1"
gunicorn = "20.1.0"
newspaper3k = "0.2.8"
requests = "2.26.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
black = "^22.3.0"
pytest-cov = "3.0.0"
isort = "5.10.1"
flake8 = "4.0.1"
pytest-xdist = "2.5.0"




[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
